<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_ing"
        android:layout_height="wrap_content"
        android:text="INGREDIANT"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecyclerViewSteps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>




</LinearLayout>