...
            android:id="@+id/btnPrev"
            android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btnNext"
            android:drawableLeft="@drawable/ic_arrow_forward_black_24dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />

    </LinearLayout>
    <LinearLayout
...
